--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Currículum de Hernan Chirinos</title>
+    <style>
+        /* Estilos CSS para tu currículum */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #0074D9;
+            color: #FFFFFF;
+            text-align: center;
+            padding: 20px;
+        }
+        h1, h2 {
+            margin: 0;
+        }
+        section {
+            padding: 20px;
+            border-bottom: 1px solid #E0E0E0;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hola esta es mi magina web de github</h1>
+    <header>
+        <h1>Hernan Chirinos</h1>
+        <h2>Ingeniero de Sistemas y Full Stack Java</h2>
+    </header>
+    <section id="about">
+        <h2>Acerca de mí</h2>
+        <p>Soy un apasionado ingeniero de sistemas con más de 10 años de experiencia en el desarrollo de software. Mi enfoque se centra en metodologías ágiles como Scrum y en tecnologías como SpringBoot, REACT y Docker.</p>
+    </section>
+    <section id="experience">
+        <h2>Experiencia Profesional</h2>
+        <ul>
+            <!-- Agrega aquí tus experiencias laborales -->
+            <li>
+                <strong>Programador Full-Stack</strong>
+                <p>Proaplicaciones, S.A</p>
+                <p>Desarrollo e implementación de un Sistema SEO en Golang utilizando técnicas de Scraping en Java y Javascript. Creación de la página web del sistema SEO con Bootstrap, Javascript, HTML y CSS. Configuración de un servidor Docker en AWS EC2.</p>
+                <p>Junio 2021 - Noviembre 2022</p>
+            </li>
+            <li>
+                <strong>Programador Back-End</strong>
+                <p>Romsant Investiment, LLC</p>
+                <p>Elaboración de reportes especiales en PHP con MySQL para la plataforma WHMCS. Personalización de plantillas de respuesta en correos de WHMCS. Implementación del API de la WL-VPN en el servidor de Digital Ocean. Desarrollo compartido de la API en PHP para el registro de clientes en altervpn.net.</p>
+                <p>Diciembre 2020 - Junio 2021</p>
+            </li>
+            <li>
+                <strong>Coordinador de Sistemas</strong>
+                <p>CERAMIC CENTER (Inversiones 0905, C.A)</p>
+                <p>Coordinación de todos los sistemas inherentes a la gestión administrativa, de almacén, contabilidad y redes en la empresa. También supervisión y reparación de equipos de facturación y computación.</p>
+                <p>Junio 2015 - Agosto 2015</p>
+            </li>
+            <li>
+                <strong>Gerente en Tecnologías</strong>
+                <p>N&M SUMINISTROS, C.A</p>
+                <p>Gerencia y soporte general en los sistemas implementados por la empresa. Experiencia en desarrollo de sistemas administrativos y contables utilizando Java y bases de datos MySQL e Interbase. Conocimientos en desarrollo de reportes con Ireport y CrystalReport.</p>
+                <p>Mayo 2011 - Agosto 2013</p>
+            </li>
+            <li>
+                <strong>Soportista en Sistemas y Equipos Fiscales</strong>
+                <p>SERVICIOS DE COMPUTACION DIGITECH, C.A</p>
+                <p>Técnico en reparación de equipos fiscales, actualización de firmwares, desarrollo web y manejo de bases de datos. Programador de microcontroladores y técnico de PCs y portátiles.</p>
+                <p>Diciembre 2007 - Mayo 2011</p>
+            </li>
+        </ul>
+    </section>
+    <section id="education">
+        <h2>Educación</h2>
+        <ul>
+            <li>Universidad UNEFA - Junio 2007 a Junio 2012</li>
+            <li>Universidad UNEXPO - Enero 2000 a Enero 2003</li>
+        </ul>
+    </section>
+    <section id="skills">
+        <h2>Habilidades</h2>
+        <p>Microsoft Excel, Java, MySQL, HTML, CSS, Spring Boot, Docker, Git, AWS, Google Cloud, etc.</p>
+    </section>
 </body>
 </html>
