--- a/index.html
+++ b/index.html
@@ -1,93 +1,101 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículum de Hernan Chirinos</title>
-    <style>
-        /* Estilos CSS para tu currículum */
+    <title>Hernan Chirinos - Curriculum Vitae</title>
+       <style>
+        /* Estilos CSS (personalizables) */
         body {
             font-family: Arial, sans-serif;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
-        }
-        header {
-            background-color: #0074D9;
-            color: #FFFFFF;
-            text-align: center;
-            padding: 20px;
+            background-color: #f9f9f9;
+            color: #333;
         }
         h1, h2 {
-            margin: 0;
-        }
-        section {
-            padding: 20px;
-            border-bottom: 1px solid #E0E0E0;
+            color: #007bff;
         }
         ul {
-            list-style-type: none;
+            list-style: none;
             padding: 0;
         }
         li {
-            margin-bottom: 10px;
+            margin-bottom: 1rem;
+        }
+        section {
+            background-color: #fff;
+            padding: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 1rem;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Hernan Chirinos</h1>
-        <h2>Ingeniero de Sistemas y Full Stack Java</h2>
+        <h2>Systems Engineer and Full Stack Java Developer</h2>
     </header>
     <section id="about">
-        <h2>Acerca de mí</h2>
-        <p>Soy un apasionado ingeniero de sistemas con más de 10 años de experiencia en el desarrollo de software. Mi enfoque se centra en metodologías ágiles como Scrum y en tecnologías como SpringBoot, REACT y Docker.</p>
+        <h2>About Me</h2>
+        <p>I am a passionate Full-Stack developer and systems engineer with over 10 years of experience in software development. My focus lies in agile methodologies such as Scrum, and I work with technologies like Spring Boot, React, Kubernetes, Kafka, and Docker.</p>
     </section>
     <section id="experience">
-        <h2>Experiencia Profesional</h2>
+        <h2>Professional Experience</h2>
         <ul>
-            <!-- Agrega aquí tus experiencias laborales -->
+		       <li>
+               <strong>Full-Stack Programmer</strong>
+			   <p>Gigas Ingenium, C.A</p>
+               <p>Developed and implemented an  2D casino games using technologies like Unity, HTML5, and game engines. My focus is on user experience, intuitive interfaces, and engaging gameplay.</p>
+               <p>December 2022 - August 2023</p>
+			   </li>
+		
             <li>
-                <strong>Programador Full-Stack</strong>
+                <strong>Full-Stack Programmer</strong>
                 <p>Proaplicaciones, S.A</p>
-                <p>Desarrollo e implementación de un Sistema SEO en Golang utilizando técnicas de Scraping en Java y Javascript. Creación de la página web del sistema SEO con Bootstrap, Javascript, HTML y CSS. Configuración de un servidor Docker en AWS EC2.</p>
-                <p>Junio 2021 - Noviembre 2022</p>
+                <p>Developed and implemented an SEO system in Golang using Java and JavaScript scraping techniques. Created the SEO system's website with Bootstrap, JavaScript, HTML, and CSS. Configured a Docker server on AWS EC2.</p>
+                <p>June 2021 - November 2022</p>
             </li>
             <li>
-                <strong>Programador Back-End</strong>
+                <strong>Back-End Programmer</strong>
                 <p>Romsant Investiment, LLC</p>
-                <p>Elaboración de reportes especiales en PHP con MySQL para la plataforma WHMCS. Personalización de plantillas de respuesta en correos de WHMCS. Implementación del API de la WL-VPN en el servidor de Digital Ocean. Desarrollo compartido de la API en PHP para el registro de clientes en altervpn.net.</p>
-                <p>Diciembre 2020 - Junio 2021</p>
+                <p>Developed a VPN and created special reports in PHP with MySQL for the WHMCS platform. Customized response templates for WHMCS emails. Implemented the WL-VPN API on the Digital Ocean server. Collaborated on developing the PHP API for client registration on the altervpn.net website.</p>
+                <p>December 2020 - June 2021</p>
             </li>
             <li>
-                <strong>Coordinador de Sistemas</strong>
-                <p>CERAMIC CENTER (Inversiones 0905, C.A)</p>
-                <p>Coordinación de todos los sistemas inherentes a la gestión administrativa, de almacén, contabilidad y redes en la empresa. También supervisión y reparación de equipos de facturación y computación.</p>
-                <p>Junio 2015 - Agosto 2015</p>
-            </li>
-            <li>
-                <strong>Gerente en Tecnologías</strong>
+                <strong>Technology Manager</strong>
                 <p>N&M SUMINISTROS, C.A</p>
-                <p>Gerencia y soporte general en los sistemas implementados por la empresa. Experiencia en desarrollo de sistemas administrativos y contables utilizando Java y bases de datos MySQL e Interbase. Conocimientos en desarrollo de reportes con Ireport y CrystalReport.</p>
-                <p>Mayo 2011 - Agosto 2013</p>
+                <p>Managed and provided general support for the company's implemented systems. Experienced in developing administrative and accounting systems using Java and MySQL/Interbase databases. Proficient in creating reports with Ireport and CrystalReport.</p>
+                <p>May 2011 - August 2013</p>
             </li>
             <li>
-                <strong>Soportista en Sistemas y Equipos Fiscales</strong>
+                <strong>Systems and Fiscal Equipment Support Specialist</strong>
                 <p>SERVICIOS DE COMPUTACION DIGITECH, C.A</p>
-                <p>Técnico en reparación de equipos fiscales, actualización de firmwares, desarrollo web y manejo de bases de datos. Programador de microcontroladores y técnico de PCs y portátiles.</p>
-                <p>Diciembre 2007 - Mayo 2011</p>
+                <p>Repaired fiscal equipment and Hewlett Packard servers, updated firmware, developed websites, and managed databases. Programmed microcontrollers and provided certified network technical support.</p>
+                <p>December 2007 - May 2011</p>
             </li>
         </ul>
     </section>
     <section id="education">
-        <h2>Educación</h2>
+        <h2>Education</h2>
         <ul>
-            <li>Universidad UNEFA - Junio 2007 a Junio 2012</li>
-            <li>Universidad UNEXPO - Enero 2000 a Enero 2003</li>
+            <li>Universidad UNEFA - June 2007 to June 2012</li>
+            <li>Universidad UNEXPO - January 2000 to January 2003</li>
         </ul>
     </section>
     <section id="skills">
-        <h2>Habilidades</h2>
-        <p>Microsoft Excel, Java, MySQL, HTML, CSS, Spring Boot, Docker, Git, AWS, Google Cloud, etc.</p>
+        <h2>Skills</h2>
+        <p>Docker, Kubernetes, Terraform, Google Cloud, Amazon AWS, DigitalOcean Cloud, Apache Kafka, RabbitMQ, Flex Box, Bootstrap, React, JavaScript, APIs, Go, Java, Spring Boot, React JS, Git, GitHub Actions, Prometheus, Grafana</p>
+    </section>
+    <section id="achievements">
+        <h2>Achievements</h2>
+        <ul>
+            <li>Implemented automation solutions using Docker, Kubernetes, and Jenkins, resulting in a 30% improvement in software development efficiency and quality.</li>
+            <li>Collaborated closely with development teams to integrate CI/CD practices into the development process using tools like GitHub Actions.</li>
+            <li>Established and maintained monitoring and alert systems using tools such as Prometheus and Grafana to ensure application performance and availability.</li>
+        </ul>
     </section>
 </body>
 </html>
